testsuite/bsc.interra/messages/EBadExport/EBadExport1.bs.bsc-out.expected
checking package dependencies
compiling EBadExport1.bs
Error: "EBadExport1.bs", line 15, column 53: (T0122)
  Duplicate export `mkEBadExport1'
